2010-03-25 Borut Razem <borut.razem AT siol.net>

	* sdcc/configure, sdcc/configure.in, sdcc/sdccconf_in.h,
	  sdcc/sim/ucsim/configure, sdcc/sim/ucsim/configure.in,
	  sdcc/sim/ucsim/ddconfig_in.h:
	  fixed endianness detection, enabled NetBSD build
	* sim/ucsim/cmd.src/cmdpars.cc:
	  fixed alloca detection on Solaris x86. This is actually bison++ bug.
	* support/regression/tests/bitfields.c,
	  support/regression/tests/literalop.c,
	  support/regression/tests/bitwise.c,
	  support/regression/tests/swap.c:
	  fixed host regression tests on NetBSD sparc64

2010-03-23 Borut Razem <borut.razem AT siol.net>

	* device/include/*.h, device/include/asm/z80/features.h,
	  device/include/asm/default/features.h, device/include/z80/*.h,
	  device/lib/z80/*.s, device/include/asm/ds390/features.h,
	  device/lib/ds390/memcpyx.c, device/lib/ds390/putchar.c:
	  sdcc library license changed to GPL+LE

2010-03-20 Borut Razem <borut.razem AT siol.net>

	* main_in.mk, configure, debugger/mcs51/configure,
	  debugger/mcs51/Makefile.in, debugger/mcs51/configure.in,
	  configure.in, src/Makefile.in, src/port.mk, sim/ucsim/configure,
	  sim/ucsim/cmd.src/Makefile.in, , sim/ucsim/xa.src/Makefile.in,
	  sim/ucsim/z80.src/Makefile.in, sim/ucsim/gui.src/Makefile.in,
	  sim/ucsim/gui.src/serio.src/Makefile.in,
	  sim/ucsim/gui.src/obsolete/portmon.src/Makefile.in,
	  sim/ucsim/sim.src/Makefile.in, sim/ucsim/main_in.mk,
	  sim/ucsim/configure.in, sim/ucsim/hc08.src/Makefile.in:
	  introduced MAKEDEP

2010-03-20 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, support/regression/tests/bitfields.c,
	  support/regression/tests/bug-1981238.c,
	  support/regression/tests/preproc.c,
	  support/regression/tests/strtok.c,
	  support/regression/tests/structflexarray.c,
	  support/regression/tests/malloc.c:
	  regression test fixed for SunPro C compiler
	* support/regression/ports/host/spec.mk:
	  adapted for SunPro C compiler & renamed to spec.mk.in
	* support/regression/Makefile.in: