@@ -1,3 +1,15 @@
+2010-03-28 Borut Razem <borut.razem AT siol.net>
+
+	* device/include/ds400/ds400rom.h, device/include/asm/gbz80/features.h,
+	  device/lib/z80/crt0.s, device/lib/gbz80/stubs.s,
+	  device/lib/gbz80/div.s, device/lib/gbz80/fstubs.s,
+	  device/lib/gbz80/putchar.s, device/lib/gbz80/crt0.s,
+	  device/lib/gbz80/crt0_rle.s, device/lib/gbz80/heap.s,
+	  device/lib/gbz80/mul.s, device/lib/gbz80/shift.s,
+	  device/lib/ds400/memcpyx.c, device/lib/hc08/_mulint.c,
+	  device/lib/hc08/_ret.c, device/lib/hc08/_mullong.c:
+	  sdcc library license changed to GPL+LE
+
 2010-03-25 Borut Razem <borut.razem AT siol.net>
 
 	* sdcc/configure, sdcc/configure.in, sdcc/sdccconf_in.h,
